<resources>
    <string name="app_name" translatable="false">Pizza Boy</string>
    <string name="msg_informe_nome_usuario">Enter your Username</string>
    <string name="msg_input_password">Enter your Password</string>
    <string name="senha">Password</string>
    <string name="login">Access</string>
    <string name="title_activity_login">Enter your Account</string>
    <string name="user">Username</string>
    <string name="action_settings">Settings</string>
    <string name="msg_invalid_login">Invalid Username or Password</string>
    <string name="msg_welcome">Olá %1$s</string>

</resources>
